[WCMSFEQ-779] fixing icon clipping on mobile header search icon

--- a/CancerGov/_src/StyleSheets/_header.scss
+++ b/CancerGov/_src/StyleSheets/_header.scss
@@ -128,7 +128,7 @@ a.nav-dictionary::before {
 }
 button.nav-search::before {
 	@include svg-sprite(search);
-	font-size: 24px;
+	font-size: 298%; //just under 300% to prevent unfavorable rounding
 }
 
 /* popup */
